--- a/src/app.css
+++ b/src/app.css
@@ -8,4 +8,45 @@
         font-weight: normal;
         font-style: normal;
     }
+    *{
+        font-family: 'TAEBAEKmilkyway';
+        color:  rgb(250 250 250);
+    }
+    
+    input:focus,
+	select:focus,
+	textarea:focus,
+	button:focus {
+		outline: none;
+	}
+
+	input[type='date']::-webkit-inner-spin-button,
+	input[type='date']::-webkit-calendar-picker-indicator {
+		display: none;
+		-webkit-appearance: none;
+	}
+
+	input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
+
+	/* Firefox */
+	input[type='number'] {
+		-moz-appearance: textfield;
+	}
+
+	/* Change the white to any color */
+	input:-webkit-autofill,
+	input:-webkit-autofill:hover,
+	input:-webkit-autofill:focus,
+	input:-webkit-autofill:active {
+		-webkit-box-shadow: 0 0 0 30px black inset !important;
+	}
+
+	/*Change text in autofill textbox*/
+	input:-webkit-autofill {
+		-webkit-text-fill-color: white !important;
+	}
 }
